# medical_research

./: README.md  package.json  pnpm-lock.yaml  test  vite.config.js
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  desktop.json  mobile.json
src-tauri/src/: cmd.rs  lib.rs  main.rs  qianfan.rs  utils.rs
src-tauri/src/qianfan/: iam_auth.rs
src/lib/: Chat.svelte  ChatBubble.svelte  ChatHeader.svelte  ChatIndex.svelte  List.svelte  Template.svelte  store.ts
src/lib/chat/: Message.svelte  Timeline.svelte
src/lib/types/: message.type.ts
src/routes/: +layout.svelte  +layout.ts  +page.js  +page.svelte
