[package]
name = "medical_research"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "medical_research_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.39"
rustc-serialize = "0.3.25"
rust-crypto = "0.2.36"
urlencoding = "2.1.3"
anyhow = "1.0.95"


